# rusty-fork

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  readme-prologue.md
rusty-fork-macro/: Cargo.toml
rusty-fork-macro/src/: lib.rs
src/: child_wrapper.rs  cmdline.rs  error.rs  fork.rs  fork_test.rs  lib.rs  sugar.rs
