[package]
name = "fork-test"
version = "0.0.1"
authors = ["Jason Lingle"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/altsysrq/fork-test"
documentation = "https://docs.rs/fork-test"
keywords = ["testing", "process", "fork"]
categories = ["development-tools::testing"]

description = """
Cross-platform library for running Rust tests in sub-processes using a
fork-like interface.
"""

[badges]
travis-ci = { repository = "AltSysrq/fork-test" }

[features]

default = []

[dependencies]
fnv = "1.0.6"
quick-error = "1.2.1"
tempfile = "2.2.0"

[dev-dependencies]
