[package]
name = "rusty-fork-macro"
version = "0.1.0"
authors = ["Jason Lingle"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/altsysrq/rusty-fork"
documentation = "https://docs.rs/rusty-fork-macro"
keywords = ["testing", "process", "fork"]
categories = ["development-tools::testing"]
edition = "2018"

description = """
Proc-macro library for rusty-fork.
"""

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
rusty-fork = { path = "../", features = ["macro", "timeout"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
